--- a/html/date/2024-10/page-6.htm
+++ b/html/date/2024-10/page-6.htm
@@ -258,16 +258,16 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/category/article-11461.htm" title="动物防疫疫苗种类大全图（动物疫苗知识）">动物防疫疫苗种类大全图（动物疫苗知识）</a></li>
-                        <li class="py-2"><a href="/html/category/article-10855.htm" title="动物医院开设条件有哪些要求和标准（开动物医院需要具备哪些条件）">动物医院开设条件有哪些要求和标准（开动物医院需要具备哪些条件）</a></li>
-                        <li class="py-2"><a href="/html/category/article-10609.htm" title="兰州狗粮批发市场电话地址（兰州狗狗市场）">兰州狗粮批发市场电话地址（兰州狗狗市场）</a></li>
-                        <li class="py-2"><a href="/html/category/article-10508.htm" title="收狗狗的平台叫什么的简单介绍">收狗狗的平台叫什么的简单介绍</a></li>
-                        <li class="py-2"><a href="/html/category/article-11074.htm" title="动物疫苗的种类有哪些图片及价格大全图（动物疫苗的种类有哪些图片及价格大全图解）">动物疫苗的种类有哪些图片及价格大全图（动物疫苗的种类有哪些图片及价格大全图解）</a></li>
-                        <li class="py-2"><a href="/html/category/article-10507.htm" title="动物疫苗新规定有哪些种类图片 动物疫苗新规定有哪些种类图片大全">动物疫苗新规定有哪些种类图片 动物疫苗新规定有哪些种类图片大全</a></li>
+                        <li class="py-2"><a href="/html/category/article-11462.htm" title="十大冷门暴利生意卖茶叶收破烂渔具店（倒卖茶叶生意）">十大冷门暴利生意卖茶叶收破烂渔具店（倒卖茶叶生意）</a></li>
+                        <li class="py-2"><a href="/html/category/article-11694.htm" title="参观动物医院的实验报告总结（动物医院社会实践报告）">参观动物医院的实验报告总结（动物医院社会实践报告）</a></li>
+                        <li class="py-2"><a href="/html/category/article-11779.htm" title="老倪祖三贴膏药效果怎么样(老倪祖三贴真的有效吗)">老倪祖三贴膏药效果怎么样(老倪祖三贴真的有效吗)</a></li>
+                        <li class="py-2"><a href="/html/category/article-11511.htm" title="动物接种疫苗多少钱一针啊视频讲解图片（动物疫苗接种方法及注意事项）">动物接种疫苗多少钱一针啊视频讲解图片（动物疫苗接种方法及注意事项）</a></li>
+                        <li class="py-2"><a href="/html/category/article-11693.htm" title="青岛动物医生招聘（青岛动物医生招聘最新信息）">青岛动物医生招聘（青岛动物医生招聘最新信息）</a></li>
+                        <li class="py-2"><a href="/html/category/article-11829.htm" title="宠物医院治疗仓鼠费用高吗（一般的宠物医院治仓鼠吗）">宠物医院治疗仓鼠费用高吗（一般的宠物医院治仓鼠吗）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10856.htm" title="猫咪3针打完以后每年打什么针比较好（猫咪三针多久打一次）">猫咪3针打完以后每年打什么针比较好（猫咪三针多久打一次）</a></li>
+                        <li class="py-2"><a href="/html/category/article-11612.htm" title="初中生可以报考兽医学校吗（中学生可以报考兽医学校吗）">初中生可以报考兽医学校吗（中学生可以报考兽医学校吗）</a></li>
                         <li class="py-2"><a href="/html/category/article-11412.htm" title="开宠物店一天能赚多少钱（开宠物店一个月可以赚多少钱）">开宠物店一天能赚多少钱（开宠物店一个月可以赚多少钱）</a></li>
-                        <li class="py-2"><a href="/html/category/article-11000.htm" title="宠物猫批发价多少钱（宠物猫批发市场）">宠物猫批发价多少钱（宠物猫批发市场）</a></li>
-                        <li class="py-2"><a href="/html/category/article-10662.htm" title="济南猫咪领养网（济南免费领养小奶猫网站）">济南猫咪领养网（济南免费领养小奶猫网站）</a></li>
-                        <li class="py-2"><a href="/html/category/article-10557.htm" title="动物防疫疫苗数量统计表 动物防疫疫苗数量统计表格">动物防疫疫苗数量统计表 动物防疫疫苗数量统计表格</a></li>
+                        <li class="py-2"><a href="/html/category/article-11561.htm" title="宠物医生报考哪个专业（宠物医生报考哪个专业好）">宠物医生报考哪个专业（宠物医生报考哪个专业好）</a></li>
                     </ul>
     </div>
 </div>
@@ -278,6 +278,7 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
+                        <li class="py-2"><a href="/html/date/2024-12/" title="2024-12 归档">2024-12 </a> <span class="badge">6</span></li>
                         <li class="py-2"><a href="/html/date/2024-11/" title="2024-11 归档">2024-11 </a> <span class="badge">46</span></li>
                         <li class="py-2"><a href="/html/date/2024-10/" title="2024-10 归档">2024-10 </a> <span class="badge">58</span></li>
                         <li class="py-2"><a href="/html/date/2024-09/" title="2024-09 归档">2024-09 </a> <span class="badge">54</span></li>
