--- a/html/date/2024-08/page-6.htm
+++ b/html/date/2024-08/page-6.htm
@@ -290,16 +290,16 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/category/article-11461.htm" title="动物防疫疫苗种类大全图（动物疫苗知识）">动物防疫疫苗种类大全图（动物疫苗知识）</a></li>
-                        <li class="py-2"><a href="/html/category/article-11166.htm" title="关于动物疫苗生产厂家排名榜最新名单及价格的信息">关于动物疫苗生产厂家排名榜最新名单及价格的信息</a></li>
-                        <li class="py-2"><a href="/html/category/article-10961.htm" title="宠物领养平台app推荐哪个软件最好（宠物领养 app）">宠物领养平台app推荐哪个软件最好（宠物领养 app）</a></li>
-                        <li class="py-2"><a href="/html/category/article-11073.htm" title="打了疫苗可以吃动物内脏吗（打完疫苗可以吃内脏嘛）">打了疫苗可以吃动物内脏吗（打完疫苗可以吃内脏嘛）</a></li>
-                        <li class="py-2"><a href="/html/category/article-10855.htm" title="动物医院开设条件有哪些要求和标准（开动物医院需要具备哪些条件）">动物医院开设条件有哪些要求和标准（开动物医院需要具备哪些条件）</a></li>
-                        <li class="py-2"><a href="/html/category/article-10822.htm" title="有宠物回收的吗（有宠物回收的吗知乎）">有宠物回收的吗（有宠物回收的吗知乎）</a></li>
-                        <li class="py-2"><a href="/html/category/article-11561.htm" title="宠物医生报考哪个专业（宠物医生报考哪个专业好）">宠物医生报考哪个专业（宠物医生报考哪个专业好）</a></li>
-                        <li class="py-2"><a href="/html/category/article-11512.htm" title="川菜大全（川菜大全130道菜名字）">川菜大全（川菜大全130道菜名字）</a></li>
-                        <li class="py-2"><a href="/html/category/article-11265.htm" title="人生路不熟红色车是什么牌子多少钱(人生路不熟是什么意思)">人生路不熟红色车是什么牌子多少钱(人生路不熟是什么意思)</a></li>
-                        <li class="py-2"><a href="/html/category/article-10610.htm" title="哪些车是二手车市场比较畅销的车型呢(什么二手车销量最好)">哪些车是二手车市场比较畅销的车型呢(什么二手车销量最好)</a></li>
+                        <li class="py-2"><a href="/html/category/article-11830.htm" title="动物疫苗市场促销方案怎么写（2021年动物疫苗采购）">动物疫苗市场促销方案怎么写（2021年动物疫苗采购）</a></li>
+                        <li class="py-2"><a href="/html/category/article-11215.htm" title="喊话器录音什么格式好用(喊话器录音什么格式好听)">喊话器录音什么格式好用(喊话器录音什么格式好听)</a></li>
+                        <li class="py-2"><a href="/html/category/article-11412.htm" title="开宠物店一天能赚多少钱（开宠物店一个月可以赚多少钱）">开宠物店一天能赚多少钱（开宠物店一个月可以赚多少钱）</a></li>
+                        <li class="py-2"><a href="/html/category/article-11612.htm" title="初中生可以报考兽医学校吗（中学生可以报考兽医学校吗）">初中生可以报考兽医学校吗（中学生可以报考兽医学校吗）</a></li>
+                        <li class="py-2"><a href="/html/category/article-11779.htm" title="老倪祖三贴膏药效果怎么样(老倪祖三贴真的有效吗)">老倪祖三贴膏药效果怎么样(老倪祖三贴真的有效吗)</a></li>
+                        <li class="py-2"><a href="/html/category/article-11361.htm" title="免费领养狗狗的平台 免费领养狗狗的平台有哪些">免费领养狗狗的平台 免费领养狗狗的平台有哪些</a></li>
+                        <li class="py-2"><a href="/html/category/article-11216.htm" title="罗格朗开关是品牌吗(罗格朗开关质量怎么样)">罗格朗开关是品牌吗(罗格朗开关质量怎么样)</a></li>
+                        <li class="py-2"><a href="/html/category/article-10821.htm" title="红烧猪蹄怎么做窍门(红烧猪蹄怎么做法)">红烧猪蹄怎么做窍门(红烧猪蹄怎么做法)</a></li>
+                        <li class="py-2"><a href="/html/category/article-11780.htm" title="蓝馨（蓝馨花园）">蓝馨（蓝馨花园）</a></li>
+                        <li class="py-2"><a href="/html/category/article-11000.htm" title="宠物猫批发价多少钱（宠物猫批发市场）">宠物猫批发价多少钱（宠物猫批发市场）</a></li>
                     </ul>
     </div>
 </div>
@@ -310,6 +310,7 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
+                        <li class="py-2"><a href="/html/date/2024-12/" title="2024-12 归档">2024-12 </a> <span class="badge">6</span></li>
                         <li class="py-2"><a href="/html/date/2024-11/" title="2024-11 归档">2024-11 </a> <span class="badge">46</span></li>
                         <li class="py-2"><a href="/html/date/2024-10/" title="2024-10 归档">2024-10 </a> <span class="badge">58</span></li>
                         <li class="py-2"><a href="/html/date/2024-09/" title="2024-09 归档">2024-09 </a> <span class="badge">54</span></li>
