--- a/html/date/2024-10/page-2.htm
+++ b/html/date/2024-10/page-2.htm
@@ -290,16 +290,16 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/category/article-10557.htm" title="动物防疫疫苗数量统计表 动物防疫疫苗数量统计表格">动物防疫疫苗数量统计表 动物防疫疫苗数量统计表格</a></li>
-                        <li class="py-2"><a href="/html/category/article-11126.htm" title="三国杀限定技能特效在哪（三国杀 限定技）">三国杀限定技能特效在哪（三国杀 限定技）</a></li>
-                        <li class="py-2"><a href="/html/category/article-11511.htm" title="动物接种疫苗多少钱一针啊视频讲解图片（动物疫苗接种方法及注意事项）">动物接种疫苗多少钱一针啊视频讲解图片（动物疫苗接种方法及注意事项）</a></li>
-                        <li class="py-2"><a href="/html/category/article-11561.htm" title="宠物医生报考哪个专业（宠物医生报考哪个专业好）">宠物医生报考哪个专业（宠物医生报考哪个专业好）</a></li>
-                        <li class="py-2"><a href="/html/category/article-10508.htm" title="收狗狗的平台叫什么的简单介绍">收狗狗的平台叫什么的简单介绍</a></li>
-                        <li class="py-2"><a href="/html/category/article-10856.htm" title="猫咪3针打完以后每年打什么针比较好（猫咪三针多久打一次）">猫咪3针打完以后每年打什么针比较好（猫咪三针多久打一次）</a></li>
-                        <li class="py-2"><a href="/html/category/article-10507.htm" title="动物疫苗新规定有哪些种类图片 动物疫苗新规定有哪些种类图片大全">动物疫苗新规定有哪些种类图片 动物疫苗新规定有哪些种类图片大全</a></li>
-                        <li class="py-2"><a href="/html/category/article-11361.htm" title="免费领养狗狗的平台 免费领养狗狗的平台有哪些">免费领养狗狗的平台 免费领养狗狗的平台有哪些</a></li>
-                        <li class="py-2"><a href="/html/category/article-11215.htm" title="喊话器录音什么格式好用(喊话器录音什么格式好听)">喊话器录音什么格式好用(喊话器录音什么格式好听)</a></li>
+                        <li class="py-2"><a href="/html/category/article-11315.htm" title="宠物粮食市场营销调查（宠物粮市场分析）">宠物粮食市场营销调查（宠物粮市场分析）</a></li>
+                        <li class="py-2"><a href="/html/category/article-11562.htm" title="自己拿疫苗去宠物医院打可以吗多少钱（自己买疫苗去宠物店打）">自己拿疫苗去宠物医院打可以吗多少钱（自己买疫苗去宠物店打）</a></li>
+                        <li class="py-2"><a href="/html/category/article-11316.htm" title="动物注射疫苗的流程视频 动物注射疫苗的流程视频讲解">动物注射疫苗的流程视频 动物注射疫苗的流程视频讲解</a></li>
+                        <li class="py-2"><a href="/html/category/article-11165.htm" title="燃气回访电话怎么打(燃气公司回访用户方案)">燃气回访电话怎么打(燃气公司回访用户方案)</a></li>
                         <li class="py-2"><a href="/html/category/article-11265.htm" title="人生路不熟红色车是什么牌子多少钱(人生路不熟是什么意思)">人生路不熟红色车是什么牌子多少钱(人生路不熟是什么意思)</a></li>
+                        <li class="py-2"><a href="/html/category/article-11743.htm" title="宠物医生证报考条件（宠物医生证报考条件是什么）">宠物医生证报考条件（宠物医生证报考条件是什么）</a></li>
+                        <li class="py-2"><a href="/html/category/article-11693.htm" title="青岛动物医生招聘（青岛动物医生招聘最新信息）">青岛动物医生招聘（青岛动物医生招聘最新信息）</a></li>
+                        <li class="py-2"><a href="/html/category/article-11000.htm" title="宠物猫批发价多少钱（宠物猫批发市场）">宠物猫批发价多少钱（宠物猫批发市场）</a></li>
+                        <li class="py-2"><a href="/html/category/article-11074.htm" title="动物疫苗的种类有哪些图片及价格大全图（动物疫苗的种类有哪些图片及价格大全图解）">动物疫苗的种类有哪些图片及价格大全图（动物疫苗的种类有哪些图片及价格大全图解）</a></li>
+                        <li class="py-2"><a href="/html/category/article-11511.htm" title="动物接种疫苗多少钱一针啊视频讲解图片（动物疫苗接种方法及注意事项）">动物接种疫苗多少钱一针啊视频讲解图片（动物疫苗接种方法及注意事项）</a></li>
                     </ul>
     </div>
 </div>
@@ -310,6 +310,7 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
+                        <li class="py-2"><a href="/html/date/2024-12/" title="2024-12 归档">2024-12 </a> <span class="badge">6</span></li>
                         <li class="py-2"><a href="/html/date/2024-11/" title="2024-11 归档">2024-11 </a> <span class="badge">46</span></li>
                         <li class="py-2"><a href="/html/date/2024-10/" title="2024-10 归档">2024-10 </a> <span class="badge">58</span></li>
                         <li class="py-2"><a href="/html/date/2024-09/" title="2024-09 归档">2024-09 </a> <span class="badge">54</span></li>
